# vpi

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
docs/: cli-reference.md  contributing.md  creating-packages.md  installation.md  package-format.md
examples/: vers.json
scripts/: install.ps1  install.sh  mkvers.sh  vpi.1.in
src/: cmd_init.c  commands.c  commands.h  http.c  main.c  miniz.c  miniz.h  registry.c  registry.h  utils.c  utils.h  vpi.c  vpi.h  zip.c
